# rust-orm-api

./: Cargo.toml  Insomnia.json  README.md  runPG.sh
api/: Cargo.toml
api/src/: lib.rs  post_handler.rs
application/src/: lib.rs
application/src/post/: create.rs  delete.rs  mod.rs  publish.rs  read.rs
domain/: Cargo.toml
domain/src/: lib.rs  models.rs
infrastructure/migrations/2023-10-28-025544_create_posts/: up.sql
postgres-data/: postmaster.pid
postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
postgres-data/base/16388/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13393  13393_fsm  13393_vm  13397  13398  13398_fsm  13398_vm  13403  13403_fsm  13403_vm  13407  13408  13408_fsm  13408_vm  16389  16393  16397  16398  16405  2187  2224  2228  2337  2579  2600  2600_fsm  2600_vm  2601  (+181 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
shared/src/: lib.rs  response_models.rs
