[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
shared = { path = "../shared" }

rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1.0.88"
schemars = "0.8"
okapi = { version = "0.6.0-alpha-1" }
revolt_rocket_okapi = { version = "0.9.1", features = ["swagger"] }